# coding

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  accelerometer.h  build.sh  config.conf  cpp20_features.cpp  cpp23_features.cpp  demo.sh  example_usage.cpp  init.cpp  init.h  init_modern.cpp  init_modern.h  log.h  main.cpp  readme.md
src/: demo_cpp20.cpp  demo_cpp23.cpp  main.cpp
utils/: type_name.h
